# ndctechtown2022

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
package-managers/conan/py/: conanfile.py
package-managers/conan/txt/: conanfile.txt
package-managers/vcpkg/extended/: vcpkg.json
package-managers/vcpkg/simple/: vcpkg.json
src/: CMakeLists.txt  client.cpp  pkg.proto  server.cpp
